cluster-ip-kubernetes-dashboard.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubernetes-dashboard-intermediary
  namespace: kube-system
spec:
  type: ClusterIP
  ports:
  - port: 443
    targetPort: 8443
  selector:
    k8s-app: kubernetes-dashboard
