kubernetes-dashboard.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubernetes-service-external
  namespace: kube-system
spec:
  type: ExternalName
  # This points to the kubernetes-dashboard service in the kube-syste namespace
  externalName: kuernetes-dashboard.kube-system.svc.cluster.local
  ports:
  - port: 443
