argocd-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: microk8s-argocd-ingress
  namespace: argocd
spec:
  rules:
  - host: argocd.localdomain
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: argo-cd-argocd-server
            port:
              number: 8080  # Changed from 80 to 8080
