falco-sidekick.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: falcosidekick-ingress
  namespace: falco
  annotations:
spec:
  rules:
  - host: falcosidekick.localdomain
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: falco-falcosidekick-ui
            port:
              number: 2802
