ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: microk8s-ingress
  namespace: argocd
  annotations:
    #nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: microbots.localdomain
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: microbots-service-external
            port:
              number: 8080
  - host: argocd.localdomain
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: argo-cd-argocd-server
            port:
              number: 80
  - host: kubernetes-dashboard.localdomain
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kubernetes-service-external  # Points to the ExternalName service for the dashboard
            port:
              number: 8443  # Use the dashboard's internal service port
