microbots-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: microk8s-ingress-argo-microbots
  namespace: microbots
  annotations:
    #nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: microbots.localdomain
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: microbots-service
            port:
              number: 8080
